--- a/chartAPI/Base.lproj/Main.storyboard
+++ b/chartAPI/Base.lproj/Main.storyboard
@@ -26,14 +26,14 @@
                                 <rect key="frame" x="10" y="20" width="300" height="30"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UA4-Bp-RWY">
-                                        <rect key="frame" x="0.0" y="0.0" width="234" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mac-Ro-UZ3">
-                                        <rect key="frame" x="254" y="0.0" width="46" height="30"/>
-                                        <state key="normal" title="Button"/>
+                                        <rect key="frame" x="270" y="0.0" width="30" height="30"/>
+                                        <state key="normal" title="OK"/>
                                         <connections>
                                             <action selector="random:" destination="BYZ-38-t0r" eventType="touchUpInside" id="PBe-JO-p4X"/>
                                         </connections>
